Add Constant-Time Verification Framework
Adds tooling to verify wolfSSL's constant-time implementations are not broken by compiler optimizations.

Based on Trail of Bits' work on LLVM constant-time support:
https://blog.trailofbits.com/2025/12/02/introducing-constant-time-support-for-llvm-to-protect-cryptographic-code/

**Static Analysis** (`scripts/ct-verify.sh`)
- Compiles with Clang/GCC and inspects assembly for CT patterns
- Verifies XOR-AND masking preserved across optimization levels

**Dynamic Analysis** (`tests/ct/`)
- Integrates dudect for statistical timing leak detection
- Tests: `ConstantCompare`, `ctMaskSel`, `ctMaskGT`, `ctMaskEq`, `ctMaskCopy`

**LLVM 22 Compatibility** (`wolfssl/wolfcrypt/ct_intrinsics.h`)
- Provides `WC_CT_SELECT*` macros
- Uses `__builtin_ct_select` when available, falls back to mask-based implementation

**CI Integration** (`.github/workflows/constant-time.yml`)
- Runs static/dynamic analysis across Clang/GCC at O0-O3

```bash
./scripts/ct-verify.sh --quick    # Static analysis
./scripts/ct-dudect.sh --quick    # Dynamic analysis
```

All tests pass across Clang 18 and GCC 13 at all optimization levels.

--- a/.github/workflows/arduino.yml
+++ b/.github/workflows/arduino.yml
@@ -1,4 +1,4 @@
-name: Arduino CI Build (1 of 4) wolfssl
+name: Arduino CI Build wolfssl
 
 #
 # Test fetches wolfssl-examples/Arduino and uses local, latest github master branch wolfssl
