--- a/.gitignore
+++ b/.gitignore
@@ -470,3 +470,9 @@ wolfssl/debug-trace-error-codes.h
 wolfssl/debug-untrace-error-codes.h
 
 AGENTS.md
+
+# Constant time testing
+ct-verify-build/
+tests/ct/ct_test
+tests/ct/ct_intrinsics_test
+tests/ct/dudect.h
